[gd_scene load_steps=27 format=2]

[ext_resource path="res://inimigos/inimigos_comun/fase_2/arqueiro/top_down/arqueiro(T_D).gd" type="Script" id=1]
[ext_resource path="res://inimigos/inimigos_comun/fase_1/homem_das_cavernas/top_down/walk_animation/walk1.png" type="Texture" id=2]
[ext_resource path="res://inimigos/inimigos_comun/fase_2/arqueiro/top_down/attack_animation/attack1.png" type="Texture" id=3]
[ext_resource path="res://inimigos/inimigos_comun/fase_2/arqueiro/top_down/attack_animation/attack2.png" type="Texture" id=4]
[ext_resource path="res://inimigos/inimigos_comun/fase_2/arqueiro/top_down/death_animation/frame0000.png" type="Texture" id=5]
[ext_resource path="res://inimigos/inimigos_comun/fase_2/arqueiro/top_down/death_animation/frame0001.png" type="Texture" id=6]
[ext_resource path="res://inimigos/inimigos_comun/fase_1/homem_das_cavernas/top_down/walk_animation/walk2.png" type="Texture" id=7]
[ext_resource path="res://inimigos/inimigos_comun/fase_1/homem_das_cavernas/top_down/walk_animation/walk3.png" type="Texture" id=8]
[ext_resource path="res://inimigos/inimigos_comun/fase_1/homem_das_cavernas/top_down/walk_animation/walk4.png" type="Texture" id=9]
[ext_resource path="res://inimigos/inimigos_comun/fase_1/homem_das_cavernas/top_down/walk_animation/walk5.png" type="Texture" id=10]
[ext_resource path="res://inimigos/inimigos_comun/fase_1/homem_das_cavernas/top_down/walk_animation/walk6_12.png" type="Texture" id=11]
[ext_resource path="res://inimigos/inimigos_comun/fase_1/homem_das_cavernas/top_down/walk_animation/walk7.png" type="Texture" id=12]
[ext_resource path="res://inimigos/inimigos_comun/fase_1/homem_das_cavernas/top_down/walk_animation/walk8.png" type="Texture" id=13]
[ext_resource path="res://inimigos/inimigos_comun/fase_1/homem_das_cavernas/top_down/walk_animation/walk9.png" type="Texture" id=14]
[ext_resource path="res://inimigos/inimigos_comun/fase_1/homem_das_cavernas/top_down/walk_animation/walk10.png" type="Texture" id=15]
[ext_resource path="res://inimigos/inimigos_comun/fase_1/homem_das_cavernas/top_down/walk_animation/walk11.png" type="Texture" id=16]

[sub_resource type="CapsuleShape2D" id=1]
radius = 35.177
height = 7.47199

[sub_resource type="Animation" id=2]
resource_name = "atack_animation"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("spriter _A:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 3 ), ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("spriter _A:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 5.78169, -0.299728 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("animation_A:playback_speed")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("arma_inimigo/CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -0.111053, -0.0619049 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "damage_animation"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("spriter _A:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ null ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("arma_inimigo/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("spriter _A:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}

[sub_resource type="Animation" id=4]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("spriter _A:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 5 ), ExtResource( 6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("spriter _A:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( -0.11499, 3.79587 ), Vector2( -3.61885, 3.79585 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("animation_A:playback_speed")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2.5, 0.3 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("arma_inimigo/CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 4, -1 ), Vector2( -12, 0 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("spriter _A:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("spriter _A:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 5.177, -1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("arma_inimigo/CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, -2 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("animation_A:playback_speed")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=6]
length = 2.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("spriter _A:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2, 2.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 2 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 11 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("animation_A:playback_speed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("arma_inimigo/CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="CircleShape2D" id=7]
radius = 36.2275

[sub_resource type="CircleShape2D" id=8]
radius = 83.3736

[sub_resource type="CircleShape2D" id=9]
radius = 21.1471

[sub_resource type="CircleShape2D" id=10]
radius = 113.177

[node name="arqueiro(T_D)" type="KinematicBody2D" groups=[
"enemie",
]]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=[
"enemie",
]]
shape = SubResource( 1 )

[node name="spriter _A" type="Sprite" parent="."]
position = Vector2( 5.177, -1 )
rotation = -1.5708
texture = ExtResource( 2 )

[node name="animation_A" type="AnimationPlayer" parent="."]
playback_speed = 2.0
anims/atack_animation = SubResource( 2 )
anims/damage_animation = SubResource( 3 )
anims/death_animation = SubResource( 4 )
anims/idlle_animation = SubResource( 5 )
anims/walk_animation = SubResource( 6 )

[node name="corpo_A" type="Area2D" parent="." groups=[
"enemie",
]]
editor/display_folded = true
position = Vector2( 1, -3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="corpo_A" groups=[
"enemie",
]]
shape = SubResource( 7 )

[node name="area_ataque" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 0.0551758, 0.587189 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_ataque"]
position = Vector2( 8.1288, -3.29361 )
shape = SubResource( 8 )

[node name="arma_inimigo" type="Area2D" parent="." groups=[
"weapom_enemie",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="arma_inimigo" groups=[
"weapom_enemie",
]]
modulate = Color( 0.121569, 1, 0.0470588, 1 )
shape = SubResource( 9 )

[node name="AI_perception" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AI_perception"]
position = Vector2( 9.27521, 0 )
shape = SubResource( 10 )

[node name="delay_atack" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="positon_flecha" type="Position2D" parent="."]

[node name="position_fim_flecha" type="Position2D" parent="."]
position = Vector2( 1855.42, 6.10352e-005 )
[connection signal="animation_finished" from="animation_A" to="." method="_on_animation_H_C_animation_finished"]
[connection signal="area_entered" from="corpo_A" to="." method="_on_corpo_A_area_entered"]
[connection signal="body_entered" from="area_ataque" to="." method="_on_area_ataque_body_entered"]
[connection signal="body_exited" from="area_ataque" to="." method="_on_area_ataque_body_exited"]
[connection signal="body_entered" from="arma_inimigo" to="." method="_on_arma_inimigo_body_entered"]
[connection signal="body_exited" from="AI_perception" to="." method="_on_AI_perception_body_exited"]
[connection signal="timeout" from="delay_atack" to="." method="_on_delay_atack_timeout"]
